testsuite/tests/typecheck/should_fail/T16821.stderr

T16821.hs:12:1: error:
    • Kind signature on newtype declaration has non-TYPE
      return kind ‘Id (*)’
    • In the newtype declaration for ‘T’
